--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build",
-    "deploy": "npm run export && touch out/.nojekyll"
+    "deploy": "npm run export && type nul > out/.nojekyll"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
