--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build",
-    "deploy": "npm run export && touch out/.nojekyll"
+    "export": "next build && next export",
+    "deploy": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
